--- a/SEGUIN_LARVET_AndroidProject/app/src/main/res/values/strings.xml
+++ b/SEGUIN_LARVET_AndroidProject/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SEGUIN_LARVET_AndroidProject</string>
+
+    <string name="imageView">Space dedicated to the picture</string>
+    <string name="galleryButton">Gallery</string>
 </resources>
