[ADD][CAMERA] Feature to use the camera
A picture can be taken using the camera. It can then be modified.

--- a/SEGUIN_LARVET_AndroidProject/app/src/main/res/values/strings.xml
+++ b/SEGUIN_LARVET_AndroidProject/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
 
     <string name="imageView">Space dedicated to the picture</string>
     <string name="galleryButton">Gallery</string>
+    <string name="cameraButton">Camera</string>
 </resources>
