[FIX] Rescaled bitmaps for memory purposes

--- a/SEGUIN_LARVET_AndroidProject/app/src/main/res/values/strings.xml
+++ b/SEGUIN_LARVET_AndroidProject/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">SEGUIN_LARVET_AndroidProject</string>
 
     <string name="imageView">Space dedicated to the picture</string>
+    <string name="savePic">Save Picture</string>
     <string name="galleryButton">Gallery</string>
     <string name="cameraButton">Camera</string>
 
